# router/admin/creds.go
@@ -322,3 +322,61 @@ func (g *guideOcelotServer) GetSSHCred(ctx context.Context, credentials *pb.SSHK
 	}
 	return ssh, nil
 }
+
+/*SetNotifyCreds(context.Context, *NotifyCreds) (*google_protobuf.Empty, error)
+	GetNotifyCred(context.Context, *NotifyCreds) (*NotifyCreds, error)
+	UpdateNotifyCreds(context.Context, *NotifyCreds) (*google_protobuf.Empty, error)
+	NotifyCredExists(context.Context, *NotifyCreds) (*Exists, error)
+*/
+
+func (g *guideOcelotServer) SetNotifyCreds(ctx context.Context, creds *pb.NotifyCreds) (*empty.Empty, error) {
+	if creds.SubType.Parent() != pb.CredType_NOTIFIER {
+		return nil, status.Error(codes.InvalidArgument, "Subtype must be of notifier type: "+strings.Join(pb.CredType_SSH.SubtypesString(), " | "))
+	}
+	err := SetupRCCCredentials(g.RemoteConfig, g.Storage, creds)
+	if err != nil {
+		if _, ok := err.(*pb.ValidationErr); ok {
+			return &empty.Empty{}, status.Error(codes.FailedPrecondition, "Notify Creds Upload failed validation. Errors are: "+err.Error())
+		}
+		return &empty.Empty{}, status.Error(codes.Internal, err.Error())
+	}
+	return &empty.Empty{}, nil
+}
+
+func (g *guideOcelotServer) NotifyCredExists(ctx context.Context, creds *pb.NotifyCreds) (*pb.Exists, error) {
+	return g.checkAnyCredExists(ctx, creds)
+}
+
+func (g *guideOcelotServer) UpdateNotifyCreds(ctx context.Context, creds *pb.NotifyCreds) (*empty.Empty, error) {
+	return g.updateAnyCred(ctx, creds)
+}
+
+func (g *guideOcelotServer) GetNotifyCred(ctx context.Context, creds *pb.NotifyCreds) (*pb.NotifyCreds, error) {
+	creddy, err := g.getAnyCred(creds)
+	if err != nil {
+		return nil, err
+	}
+	notifier, ok := creddy.(*pb.NotifyCreds)
+	if !ok {
+		return nil, status.Error(codes.Internal, "Unable to cast as Notifier Creds")
+	}
+	return notifier, nil
+}
+
+func (g *guideOcelotServer) GetNotifyCreds(ctx context.Context, empty2 *empty.Empty) (*pb.NotifyWrap, error) {
+	credWrapper := &pb.NotifyWrap{}
+	credz, err := g.RemoteConfig.GetCredsByType(g.Storage, pb.CredType_NOTIFIER, true)
+	if err != nil {
+		if _, ok := err.(*storage.ErrNotFound); ok {
+			return nil, status.Error(codes.NotFound, err.Error())
+		}
+		return credWrapper, status.Errorf(codes.Internal, "unable to get notify creds! error: %s", err.Error())
+	}
+	for _, v := range credz {
+		credWrapper.Creds = append(credWrapper.Creds, v.(*pb.NotifyCreds))
+	}
+	if len(credWrapper.Creds) == 0 {
+		return credWrapper, status.Error(codes.NotFound, "no notifier creds found")
+	}
+	return credWrapper, nil
+}
